# canonic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRACT_CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SETUP.md  package.json  pyproject.toml  release-please-config.json  ruff.toml
.github/workflows/: ci.yml  commitlint.yml  contract-schema-guard.yml  pr-title-lint.yml  publish.yml  release-please.yml
canon/: airgap.py  config.py  contract.py  credentials.py  exc.py  log.py
canon/cli/: _errors.py  app.py  main.py  setup_state.py
canon/compiler/: __init__.py  dialect.py  joins.py  pipeline.py  query.py  result.py
canon/connectors/: acquisition.py  base.py  dbt.py  duckdb.py  factory.py  looker.py  metabase.py  notion.py  postgres.py  readonly.py  redshift.py  relation_filter.py  sqlite.py
canon/contracts/: __init__.py  assertions.py  loader.py  (+5 more)
canonic/: __init__.py  __main__.py  airgap.py  config.py  contract.py  credentials.py  exc.py  llm_providers.py  log.py
docs/: PRD-canon-final.md  SPEC-E1-foundation-config-distribution.md  SPEC-E10-llm-embeddings-runtime.md  SPEC-E16-instrumentation-metrics.md  SPEC-E2-primary-source-connector.md  SPEC-E4-ingestion-reconciliation.md  SPEC-E5-E15-semantics-and-contracts.md  SPEC-E6-knowledge-retrieval.md  SPEC-E7-E8-serving-surfaces.md  SPEC-P0-interface-freeze.md  baseline-models.md  configuring-an-llm.mdx  docs.json  end-to-end-example.mdx  installation.mdx  introduction.mdx  quickstart.mdx  tech_stack.md
scripts/: check_contract_changelog.py
tests/: conftest.py  test_adapter_parity.py  test_airgap.py  test_config.py  test_conformance_gate.py  test_credentials.py  test_exc.py  test_import.py  test_log.py
www/: index.html
(+603 files in other folders)
