[project]
name = "canonic"
version = "0.5.2"
description = "The Open Context Layer for Data Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.14,<3",
    "ruamel-yaml>=0.18",
    "sqlalchemy[asyncio]>=2.0.50,<3",
    "sqlglot>=25.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "duckdb>=1.0",
    "alembic>=1.13",
    "litellm>=1.0",
    "fastmcp>=3.0,<4",
    "typer~=0.15",
    "rich>=13",
    "tantivy>=0.22",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
canonic = "canonic.cli.app:app"
can = "canonic.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6",
    "mypy>=1.0",
    "ruff>=0.9",
    "testcontainers[postgres]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require a live database (skipped if Docker is unavailable)",
    "release_gate: conformance-gate tests — must pass (not skip) before beta invites",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["canonic"]

[tool.hatch.build.targets.wheel]
packages = ["canonic"]
